--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,12 +9,12 @@
     ],
     "allowJs": false,
     "skipLibCheck": true,
-    "esModuleInterop": false,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
+    "module": "ESNext",        // Changed to ESNext for bundler compatibility
+    "moduleResolution": "bundler", // Changed to bundler for Vite
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
